--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="com.tsi.storhs.transportationapp">
 
     <uses-permission android:name="android.permission.INTERNET"/>
@@ -8,11 +9,23 @@
         android:icon="@mipmap/ic_launcher"
         android:theme="@style/Theme.AppCompat"
         android:label="Transportation App"
-        android:screenOrientation="portrait">
+        android:screenOrientation="portrait"
+        tools:ignore="GoogleAppIndexingWarning">
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+        <activity
+            android:allowBackup="false"
+            android:theme="@style/Theme.AppCompat"
+            android:label="Transportation App"
+            android:screenOrientation="portrait"
+            android:name=".AvailableCarListActivity" >
+            <intent-filter>
+                <action android:name="com.tsi.storhs.transportationapp.AvailableCarListActivity"/>
+                <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
     </application>
